# projects

./: BoW_NB.ipynb  BoW_NB_and_SVM.ipynb  MetropolisHastings.py  PolynomialWeights.py  README.md  TitanicModelANN.ipynb  Titanic_ANN.ipynb  utf-8''TitanicMajorityVote.ipynb
R/: GitHub:Bayes_LDA_QDA.R  GitHub_Bayes_QDA_SVM.R
grad_school/: TF_LSTM.ipynb
grad_school/algos/: MetropolisHastings.py  PolynomialWeights.py
kaggle/painter_gans/: eda.ipynb  kaggle_cyclegan_notebook.ipynb  kaggle_cyclegan_utils.py  pyproject.toml
kaggle/titanic/: TitanicMajorityVote.ipynb  Titanic_ANN.ipynb  Titanic_XGBoost.py
