[tool.poetry]
name = "painter_gans"
version = "0.1.0"
description = "Building GAN for style transfer competition on kaggle"
authors = ["None"]

[tool.poetry.dependencies]
python = "^3.10,<3.12"
tensorflow-macos = "^2.11.0"
tensorflow-addons = "^0.19.0"
sourcing-kaggle-datasets = "^0.1.3"
kaggle = "^1.5.13"
matplotlib = "^3.7.1"

[tool.poetry.dev-dependencies]
kaggle = "^1.5.13"
pandas = "^1.5.3"
numpy = "^1.24.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
